# Application-Service

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_04_1402-a5e61fbaee94_.py
app/core/: config.py  logger.py  providers.py
app/domain/: exceptions.py
app/domain/entities/: application.py  queries.py
app/infrastructure/broker/: base.py  kafka_publisher.py
app/infrastructure/database/: base.py  engine.py
app/infrastructure/database/filter/: application.py  base.py
app/infrastructure/database/models/: application.py  mixins.py
app/infrastructure/database/repository/: application.py  base.py
app/public/api/: app.py  error_handlers.py  schemas.py
app/public/api/v1/: application.py  routers.py
app/services/: application.py  base.py
