[project]
name = "Applications"
version = "0.1.0"
description = "A RESTful service for handling applications with PostgreSQL storage and Kafka messaging."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dishka>=1.7.2",
    "fastapi>=0.118.0",
    "faststream[kafka]>=0.5.48",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.3",
]

[tool.mypy]
follow_imports = "skip"
plugins = ["pydantic.mypy"]
exclude = [".venv"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "alembic",
]
line-length = 79
fix = true
target-version = "py312"

[tool.ruff.lint]
select = ["COM", "T100", "E", 'F', "W", "ERA", "N", "I"]
ignore = ["F821", "COM812"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = [
    "app",
    "core",
    "services",
    "domain",
    "public",
    "infrastructure",
]
